examples/test/testpolicy14103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14103
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key12: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
          key21: value30
      podSelector:
        matchLabels:
          key9: value4
          key37: value18
